# VoxelEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ROADMAP.md
.github/workflows/: cmake-build.yml
engine/: CMakeLists.txt
engine/include/: Logger.h  Time.h  Window.h
engine/src/core/: Logger.cpp  Time.cpp  Window.cpp
game/: CMakeLists.txt
game/src/: main.cpp
